Make modules/rest extensible and fix hello-world
This also takes care of building RestController and updating to build
with OpenSearch core libraries based on 3.6.

Signed-off-by: Michael Froh <msfroh@apache.org>